[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["subhranshudas <subhranshu.opt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
yfinance = "^0.2.50"
pandas = "^2.2.3"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
